@@ -2,7 +2,7 @@ include $(top_srcdir)/common.mk
 
 moduledir = $(guilemoduledir)/overrides
 
-module_DATA = gstreamer.defs
+module_DATA = gstreamer.defs gstreamer.defs-type-ignores
 
 EXTRA_DIST = $(module_DATA)
 
